--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -19,9 +20,9 @@
     <header class="header">
         <div class="header__container">
             <nav class="main-nav">
-                <a class="main-nav__logo" href="/">Web<span class="main-nav__logo--black">Studio</span></a>
+                <a class="logo" href="/">Web<span class="logo--black">Studio</span></a>
                 <ul class="main-nav__list">
-                    <li><a class="main-nav__link current" href="./index.html">Студія</a></li>
+                    <li><a class="main-nav__link--current" href="./index.html">Студія</a></li>
                     <li><a class="main-nav__link" href="./portfolio.html">Портфоліо</a></li>
                     <li><a class="main-nav__link" href="/">Контакти</a></li>
                 </ul>
@@ -57,7 +58,7 @@
         <!-- Features -->
         <section class="features">
             <div class="features__container">
-                <h2 class="visually-hidden">Наші переваги</h2>
+                <h2 class="features__title--visually-hidden">Наші переваги</h2>
                 <ul class="features__list">
                     <li class="feature">
                         <div class="feature__icon-container">
@@ -279,48 +280,48 @@
             </div>
         </section>
         <!-- Clients_section -->
-        <section class="section">
-            <div class="clients-container">
-                <h2 class="clients-title">Постійні кліенти</h2>
-                <ul class="clients-list">
+        <section class="clients">
+            <div class="clients__container">
+                <h2 class="clients__title">Постійні кліенти</h2>
+                <ul class="clients__list">
                     <li>
                         <a class="link-client" href="/">
-                            <svg class="client-logo" width="106px" height="60px">
+                            <svg class="link-client__logo" width="106px" height="60px">
                                 <use href="./images/icons.svg#logo-one"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="link-client" href="/">
-                            <svg class="client-logo" width="106px" height="60px">
+                            <svg class="link-client__logo" width="106px" height="60px">
                                 <use href="./images/icons.svg#logo-two"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="link-client" href="/">
-                            <svg class="client-logo" width="106px" height="60px">
+                            <svg class="link-client__logo" width="106px" height="60px">
                                 <use href="./images/icons.svg#logo-three"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="link-client" href="/">
-                            <svg class="client-logo" width="106px" height="60px">
+                            <svg class="link-client__logo" width="106px" height="60px">
                                 <use href="./images/icons.svg#logo-four"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="link-client" href="/">
-                            <svg class="client-logo" width="106px" height="60px">
+                            <svg class="link-client__logo" width="106px" height="60px">
                                 <use href="./images/icons.svg#logo-five"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="link-client" href="/">
-                            <svg class="client-logo" width="106px" height="60px">
+                            <svg class="link-client__logo" width="106px" height="60px">
                                 <use href="./images/icons.svg#logo-six"></use>
                             </svg>
                         </a>
@@ -330,46 +331,46 @@
         </section>
     </main>
     <!-- Basement -->
-    <footer class="basement">
-        <div class="footer-container">
+    <footer class="footer">
+        <div class="footer__container">
             <div class="address-container">
-                <a class="basement-logo" href="./index.html">Web<span class="basement-logo-second">Studio</span></a>
-                <address class="basement-contacts">
-                    <ul>
-                        <li class="contact-item"><a class="contact-first-color" href="https://goo.gl/maps/C3TWV4PwisccWHNz8" target="_blank" rel="noopener norefererr nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li class="contact-item"><a class="contact-second-color" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="contact-item"><a class="contact-second-color" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <a class="address-container__logo" href="./index.html">Web<span class="address-container__logo--white">Studio</span></a>
+                <address class="footer-contacts">
+                    <ul class="footer-contacts__list">
+                        <li><a class="footer__contact--light" href="https://goo.gl/maps/C3TWV4PwisccWHNz8" target="_blank" rel="noopener norefererr nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li><a class="footer__contact--dark" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="footer__contact--dark" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
-            <!-- Invite_block     -->
-            <div class="invite-links-wrapper">
-                <h3 class="invite-title">приєднуйтесь</h3>
-                <ul class="invite-list">
+            <!-- Invite_block -->
+            <div class="invite-container">
+                <h3 class="invite-container__title">приєднуйтесь</h3>
+                <ul class="invite-container__list">
                     <li>
-                        <a class="basement-social-link" href="/">
-                            <svg class="basement-social-icon" width="20px" height="20px">
+                        <a class="invite-container__link" href="/">
+                            <svg class="invite-container__social-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#instagram"></use>
                             </svg>
                          </a>
                     </li>
                     <li>
-                        <a class="basement-social-link" href="/">
-                            <svg class="basement-social-icon" width="20px" height="20px">
+                        <a class="invite-container__link" href="/">
+                            <svg class="invite-container__social-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="basement-social-link" href="/">
-                            <svg class="basement-social-icon" width="20px" height="20px">
+                        <a class="invite-container__link" href="/">
+                            <svg class="invite-container__social-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="basement-social-link" href="/">
-                            <svg class="basement-social-icon" width="20px" height="20px">
+                        <a class="invite-container__link" href="/">
+                            <svg class="invite-container__social-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#linkedin"></use>
                             </svg>
                         </a>
@@ -377,12 +378,12 @@
                 </ul>
             </div>
             <!-- Mailing_form -->
-            <div>
-                <strong class="mailing-title">Підпишіться на розсилку</strong>
-                <form class="mailing-wrapper">
-                    <input class="mailing-field" name="mailing" type="text" placeholder="E-mail">
+            <div class="mailing-form">
+                <strong class="mailing-form__title">Підпишіться на розсилку</strong>
+                <form class="mailing-form__field-wrapper">
+                    <input class="mailing-form__field" name="mailing" type="text" placeholder="E-mail">
                     <button type="submit" class="mailing-button">Підписатися
-                        <svg class="send-icon" width="24" height="24">
+                        <svg class="mailing-button__icon" width="24" height="24">
                             <use  href="./images/icons.svg#send-icon"></use>
                         </svg>
                     </button>
