--- a/portfolio.html
+++ b/portfolio.html
@@ -18,39 +18,41 @@
 </head>
 
 <body>
-    <!--Navigation_bar-->
-    <header class="underline">
-        <div class="nav-container">
-            <nav class="nav-list">
-                <a class="link logo" href="/">Web<span class="second-logo">Studio</span></a>
-                <ul class="list">
-                    <li class="list-item"><a class="link nav-link " href="./index.html">Студія</a></li>
-                    <li class="list-item"><a class="link nav-link current" href="./portfolio.html">Портфоліо</a></li>
-                    <li class="list-item"><a class="link nav-link" href="/">Контакти</a></li>
+    <!-- Navigation_bar -->
+    <header class="header">
+        <div class="header__container">
+            <nav class="main-nav">
+                <a class="logo" href="/">Web<span class="logo--black">Studio</span></a>
+                <ul class="main-nav__list">
+                    <li><a class="main-nav__link" href="./index.html">Студія</a></li>
+                    <li><a class="main-nav__link--current" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="main-nav__link" href="/">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="list contacts-container">
-                <li class="list-item contacts-item">
-                    <a class="link contacts-nav" href="mailto:info@devstudio.com">
-                        <svg class="envelope-icon" width="16" height="12">
+            <ul class="contacts-list">
+                <li>
+                    <a class="contacts-list__link" href="mailto:info@devstudio.com">
+                        <svg class="contacts-list__icon" width="16" height="12">
                             <use href="./images/icons.svg#envelope"></use>
                         </svg>
-                        info@devstudio.com</a>
+                        info@devstudio.com
+                    </a>
                 </li>
-                <li class="list-item">
-                    <a class="link contacts-nav" href="tel:+380961111111">
-                        <svg class="smartphone-icon" width="10" height="16">
+                <li>
+                    <a class="contacts-list__link" href="tel:+380961111111">
+                        <svg class="contacts-list__icon" width="10" height="16">
                             <use href="./images/icons.svg#smartphone"></use>
                         </svg>
-                        +38 096 111 11 11</a>
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
     </header>
     <main>
-        <section class="portfolio section">
+        <section class="portfolio">
             <div class="projects-container">
-                <h1 class="visually-hidden">Портфоліо</h1>
+                <h1 class="portfolio__title--visually-hidden">Портфоліо</h1>
                 <!-- Portfolio_filters -->
                 <ul class="list filters-list">
                     <li class="button"><button class="filt-but" type="button">Усі</button></li>
@@ -66,7 +68,8 @@
                             <div class="item-wrapper">
                                 <img src="./images/project1.jpg" alt="Технокряк" width="370" height="294">
                                 <p class="item-overlay">
-                                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.
                                 </p>
                             </div>
@@ -79,9 +82,11 @@
                     <li>
                         <a class="link project-item" href="/">
                             <div class="item-wrapper">
-                                <img src="./images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                                <img src="./images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370"
+                                    height="294">
                                 <p class="item-overlay">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti rerum pariatur repellendus alias dolore consectetur!
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti rerum pariatur
+                                    repellendus alias dolore consectetur!
                                 </p>
                             </div>
                             <div class="description-box">
@@ -95,7 +100,8 @@
                             <div class="item-wrapper">
                                 <img src="./images/project3.jpg" alt="Ресторан Seafood" width="370" height="294">
                                 <p class="item-overlay">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit dolorem vitae sunt minus, modi asperiores!
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit dolorem vitae sunt
+                                    minus, modi asperiores!
                                 </p>
                             </div>
                             <div class="description-box">
@@ -110,7 +116,8 @@
                             <div class="item-wrapper">
                                 <img src="./images/project4.jpg" alt="Проєкт Prime" width="370" height="294">
                                 <p class="item-overlay">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et nostrum atque maxime natus quibusdam ab!
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et nostrum atque maxime natus
+                                    quibusdam ab!
                                 </p>
                             </div>
                             <div class="description-box">
@@ -124,7 +131,8 @@
                             <div class="item-wrapper">
                                 <img src="./images/project5.jpg" alt="Проєкт Boxes" width="370" height="294">
                                 <p class="item-overlay">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis soluta velit accusantium laborum nostrum natus!
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis soluta velit
+                                    accusantium laborum nostrum natus!
                                 </p>
                             </div>
                             <div class="description-box">
@@ -138,7 +146,8 @@
                             <div class="item-wrapper">
                                 <img src="./images/project6.jpg" alt="Inspiration has no Borders" width="370" height="294">
                                 <p class="item-overlay">
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit inventore dignissimos qui, voluptatem cum iste.
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit inventore dignissimos qui,
+                                    voluptatem cum iste.
                                 </p>
                             </div>
                             <div class="description-box">
@@ -152,7 +161,8 @@
                             <div class="item-wrapper">
                                 <img src="./images/project7.jpg" alt="Видання Limited Edition" width="370" height="294">
                                 <p class="item-overlay">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At rerum eos corporis nihil commodi natus.
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At rerum eos corporis nihil
+                                    commodi natus.
                                 </p>
                             </div>
                             <div class="description-box">
@@ -166,7 +176,8 @@
                             <div class="item-wrapper">
                                 <img src="./images/project8.jpg" alt="Проєкт LAB" width="370" height="294">
                                 <p class="item-overlay">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil aliquam voluptate autem minima minus cupiditate?
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil aliquam voluptate autem
+                                    minima minus cupiditate?
                                 </p>
                             </div>
                             <div class="description-box">
@@ -180,7 +191,8 @@
                             <div class="item-wrapper">
                                 <img src="./images/project9.jpg" alt="Growing Business" width="370" height="294">
                                 <p class="item-overlay">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae nihil ullam perspiciatis, illum iste minus.
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae nihil ullam
+                                    perspiciatis, illum iste minus.
                                 </p>
                             </div>
                             <div class="description-box">
@@ -193,51 +205,51 @@
             </div>
         </section>
     </main>
-    <!--Basement-->
-    <footer class="basement">
-        <div class="footer-container">
+    <!-- Basement -->
+    <footer class="footer">
+        <div class="footer__container">
             <div class="address-container">
-                <a class="link basement-logo" href="./index.html">Web<span class="basement-logo-second">Studio</span></a>
-                <address class="basement-contacts">
-                    <ul class="list">
-                        <li class="contact-item"><a class="link contact-first-color"
-                                href="https://goo.gl/maps/C3TWV4PwisccWHNz8" target="_blank"
-                                rel="noopener norefererr nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li class="contact-item"><a class="link contact-second-color"
-                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="contact-item"><a class="link contact-second-color" href="tel:+380961111111">+38 096 111
-                                11 11</a></li>
+                <a class="address-container__logo" href="./index.html">Web<span
+                        class="address-container__logo--white">Studio</span></a>
+                <address class="footer-contacts">
+                    <ul class="footer-contacts__list">
+                        <li><a class="footer__contact--light" href="https://goo.gl/maps/C3TWV4PwisccWHNz8"
+                                target="_blank" rel="noopener norefererr nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+                        </li>
+                        <li><a class="footer__contact--dark" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li><a class="footer__contact--dark" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
             <!-- Invite_block -->
-            <div class="invite-links-wrapper">
-                <h3 class="invite-title">приєднуйтесь</h3>
-                <ul class="list invite-list">
+            <div class="invite-container">
+                <h3 class="invite-container__title">приєднуйтесь</h3>
+                <ul class="invite-container__list">
                     <li>
-                        <a class="basement-social-link" href="/">
-                            <svg class="basement-social-icon" width="20px" height="20px">
+                        <a class="invite-container__link" href="/">
+                            <svg class="invite-container__social-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="basement-social-link" href="/">
-                            <svg class="basement-social-icon" width="20px" height="20px">
+                        <a class="invite-container__link" href="/">
+                            <svg class="invite-container__social-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="basement-social-link" href="/">
-                            <svg class="basement-social-icon" width="20px" height="20px">
+                        <a class="invite-container__link" href="/">
+                            <svg class="invite-container__social-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="basement-social-link" href="/">
-                            <svg class="basement-social-icon" width="20px" height="20px">
+                        <a class="invite-container__link" href="/">
+                            <svg class="invite-container__social-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#linkedin"></use>
                             </svg>
                         </a>
@@ -245,12 +257,12 @@
                 </ul>
             </div>
             <!-- Mailing_form -->
-            <div>
-                <strong class="mailing-title">Підпишіться на розсилку</strong>
-                <form class="mailing-wrapper">
-                    <input class="mailing-field" name="mailing" type="text" placeholder="E-mail">
+            <div class="mailing-form">
+                <strong class="mailing-form__title">Підпишіться на розсилку</strong>
+                <form class="mailing-form__field-wrapper">
+                    <input class="mailing-form__field" name="mailing" type="text" placeholder="E-mail">
                     <button type="submit" class="mailing-button">Підписатися
-                        <svg class="send-icon" width="24" height="24">
+                        <svg class="mailing-button__icon" width="24" height="24">
                             <use href="./images/icons.svg#send-icon"></use>
                         </svg>
                     </button>
