--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <header class="header">
         <div class="header__container">
             <nav class="main-nav">
-                <a class="logo" href="/">Web<span class="logo--black">Studio</span></a>
+                <a class="main-nav__logo" href="/">Web<span class="main-nav__logo--black">Studio</span></a>
                 <ul class="main-nav__list">
                     <li><a class="main-nav__link" href="./index.html">Студія</a></li>
                     <li><a class="main-nav__link--current" href="./portfolio.html">Портфоліо</a></li>
