Made amendments in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,153 +51,153 @@
     </header>
     <main>
         <section class="portfolio">
-            <div class="projects-container">
+            <div class="portfolio__container">
                 <h1 class="portfolio__title--visually-hidden">Портфоліо</h1>
                 <!-- Portfolio_filters -->
-                <ul class="list filters-list">
-                    <li class="button"><button class="filt-but" type="button">Усі</button></li>
-                    <li class="button"><button class="filt-but" type="button">Веб-сайти</button></li>
-                    <li class="button"><button class="filt-but" type="button">Додатки</button></li>
-                    <li class="button"><button class="filt-but" type="button">Дизайн</button></li>
-                    <li class="button"><button class="filt-but" type="button">Маркетинг</button></li>
+                <ul class="filters">
+                    <li><button class="filters__button" type="button">Усі</button></li>
+                    <li><button class="filters__button" type="button">Веб-сайти</button></li>
+                    <li><button class="filters__button" type="button">Додатки</button></li>
+                    <li><button class="filters__button" type="button">Дизайн</button></li>
+                    <li><button class="filters__button" type="button">Маркетинг</button></li>
                 </ul>
                 <!-- Portfolio_items -->
-                <ul class="list projects-list">
+                <ul class="portfolio__list">
                     <li>
-                        <a class="link project-item" href="/">
-                            <div class="item-wrapper">
+                        <a class="portfolio-item" href="/">
+                            <div class="portfolio-item__wrapper">
                                 <img src="./images/project1.jpg" alt="Технокряк" width="370" height="294">
-                                <p class="item-overlay">
+                                <p class="portfolio-item__overlay">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                     дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.
                                 </p>
                             </div>
-                            <div class="description-box">
-                                <h2 class="project-title">Технокряк</h2>
-                                <p class="project-descr">Веб-сайт</p>
+                            <div class="portfolio-item__description-box">
+                                <h2 class="portfolio-item__title">Технокряк</h2>
+                                <p class="portfolio-item__descr">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a class="link project-item" href="/">
-                            <div class="item-wrapper">
+                        <a class="portfolio-item" href="/">
+                            <div class="portfolio-item__wrapper">
                                 <img src="./images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370"
                                     height="294">
-                                <p class="item-overlay">
+                                <p class="portfolio-item__overlay">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti rerum pariatur
                                     repellendus alias dolore consectetur!
                                 </p>
                             </div>
-                            <div class="description-box">
-                                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                                <p class="project-descr">Дизайн</p>
+                            <div class="portfolio-item__description-box">
+                                <h2 class="portfolio-item__title">Постер New Orlean vs Golden Star</h2>
+                                <p class="portfolio-item__descr">Дизайн</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a class="link project-item" href="/">
-                            <div class="item-wrapper">
+                        <a class="portfolio-item" href="/">
+                            <div class="portfolio-item__wrapper">
                                 <img src="./images/project3.jpg" alt="Ресторан Seafood" width="370" height="294">
-                                <p class="item-overlay">
+                                <p class="portfolio-item__overlay">
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit dolorem vitae sunt
                                     minus, modi asperiores!
                                 </p>
                             </div>
-                            <div class="description-box">
-                                <h2 class="project-title">Ресторан Seafood</h2>
-                                <p class="project-descr">Додаток</p>
+                            <div class="portfolio-item__description-box">
+                                <h2 class="portfolio-item__title">Ресторан Seafood</h2>
+                                <p class="portfolio-item__descr">Додаток</p>
                             </div>
                         </a>
     
                     </li>
                     <li>
-                        <a class="link project-item" href="/">
-                            <div class="item-wrapper">
+                        <a class="portfolio-item" href="/">
+                            <div class="portfolio-item__wrapper">
                                 <img src="./images/project4.jpg" alt="Проєкт Prime" width="370" height="294">
-                                <p class="item-overlay">
+                                <p class="portfolio-item__overlay">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et nostrum atque maxime natus
                                     quibusdam ab!
                                 </p>
                             </div>
-                            <div class="description-box">
-                                <h2 class="project-title">Проєкт Prime</h2>
-                                <p class="project-descr">Маркетинг</p>
+                            <div class="portfolio-item__description-box">
+                                <h2 class="portfolio-item__title">Проєкт Prime</h2>
+                                <p class="portfolio-item__descr">Маркетинг</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a class="link project-item" href="/">
-                            <div class="item-wrapper">
+                        <a class="portfolio-item" href="/">
+                            <div class="portfolio-item__wrapper">
                                 <img src="./images/project5.jpg" alt="Проєкт Boxes" width="370" height="294">
-                                <p class="item-overlay">
+                                <p class="portfolio-item__overlay">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis soluta velit
                                     accusantium laborum nostrum natus!
                                 </p>
                             </div>
-                            <div class="description-box">
-                                <h2 class="project-title">Проєкт Boxes</h2>
-                                <p class="project-descr">Додаток</p>
+                            <div class="portfolio-item__description-box">
+                                <h2 class="portfolio-item__title">Проєкт Boxes</h2>
+                                <p class="portfolio-item__descr">Додаток</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a class="link project-item" href="">
-                            <div class="item-wrapper">
+                        <a class="portfolio-item" href="">
+                            <div class="portfolio-item__wrapper">
                                 <img src="./images/project6.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                                <p class="item-overlay">
+                                <p class="portfolio-item__overlay">
                                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit inventore dignissimos qui,
                                     voluptatem cum iste.
                                 </p>
                             </div>
-                            <div class="description-box">
-                                <h2 class="project-title">Inspiration has no Borders</h2>
-                                <p class="project-descr">Веб-сайт</p>
+                            <div class="portfolio-item__description-box">
+                                <h2 class="portfolio-item__title">Inspiration has no Borders</h2>
+                                <p class="portfolio-item__descr">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a class="link project-item" href="/">
-                            <div class="item-wrapper">
+                        <a class="portfolio-item" href="/">
+                            <div class="portfolio-item__wrapper">
                                 <img src="./images/project7.jpg" alt="Видання Limited Edition" width="370" height="294">
-                                <p class="item-overlay">
+                                <p class="portfolio-item__overlay">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. At rerum eos corporis nihil
                                     commodi natus.
                                 </p>
                             </div>
-                            <div class="description-box">
-                                <h2 class="project-title">Видання Limited Edition</h2>
-                                <p class="project-descr">Дизайн</p>
+                            <div class="portfolio-item__description-box">
+                                <h2 class="portfolio-item__title">Видання Limited Edition</h2>
+                                <p class="portfolio-item__descr">Дизайн</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a class="link project-item" href="/">
-                            <div class="item-wrapper">
+                        <a class="portfolio-item" href="/">
+                            <div class="portfolio-item__wrapper">
                                 <img src="./images/project8.jpg" alt="Проєкт LAB" width="370" height="294">
-                                <p class="item-overlay">
+                                <p class="portfolio-item__overlay">
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil aliquam voluptate autem
                                     minima minus cupiditate?
                                 </p>
                             </div>
-                            <div class="description-box">
-                                <h2 class="project-title">Проєкт LAB</h2>
-                                <p class="project-descr">Маркетинг</p>
+                            <div class="portfolio-item__description-box">
+                                <h2 class="portfolio-item__title">Проєкт LAB</h2>
+                                <p class="portfolio-item__descr">Маркетинг</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a class="link project-item" href="/">
-                            <div class="item-wrapper">
+                        <a class="portfolio-item" href="/">
+                            <div class="portfolio-item__wrapper">
                                 <img src="./images/project9.jpg" alt="Growing Business" width="370" height="294">
-                                <p class="item-overlay">
+                                <p class="portfolio-item__overlay">
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae nihil ullam
                                     perspiciatis, illum iste minus.
                                 </p>
                             </div>
-                            <div class="description-box">
-                                <h2 class="project-title">Growing Business</h2>
-                                <p class="project-descr">Додаток</p>
+                            <div class="portfolio-item__description-box">
+                                <h2 class="portfolio-item__title">Growing Business</h2>
+                                <p class="portfolio-item__descr">Додаток</p>
                             </div>
                         </a>
                     </li>
